--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Pizza</string>
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
-    <string name="photo_detail">Photo Detail</string>
+    <string name="pizza_detail">Pizza Detail</string>
     <string name="dismiss">Dismiss</string>
     <string name="network_error">Network Error</string>
     <string name="error">Error</string>
