--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Pizza</string>
+    <string name="main_title">Nenno\'s Pizza</string>
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
     <string name="pizza_detail">Pizza Detail</string>
