--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="network_error">Network Error</string>
     <string name="error">Error</string>
     <string name="could_not_load_data">Could not load data</string>
-    <string name="price_with_currency">%1$.2f\$</string>
+    <string name="price_with_currency">\$%1$.2f</string>
 </resources>
