--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="ingredients">Ingredients</string>
     <string name="cart">Cart</string>
     <string name="checkout">Checkout</string>
+    <string name="drinks">Drinks</string>
 </resources>
