Udpating pizza name to custom if it changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="cart">Cart</string>
     <string name="checkout">Checkout</string>
     <string name="drinks">Drinks</string>
+    <string name="custom_pizza_name">Custom %1$s</string>
 </resources>
