--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="drinks">Drinks</string>
     <string name="custom_pizza_name">Custom %1$s</string>
     <string name="add_to_cart">Add to cart</string>
+    <string name="added_to_cart">Added to cart</string>
     <string name="item_price">(\$%1$.2f)</string>
 </resources>
