--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="add_to_cart">Add to cart</string>
     <string name="added_to_cart">Added to cart</string>
     <string name="item_price">(\$%1$.2f)</string>
+    <string name="back_to_home">Back to home</string>
+    <string name="thank_you_for_your_order">Thank you for your order</string>
 </resources>
