--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="main_title">Nenno\'s Pizza</string>
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
-    <string name="pizza_detail">Pizza Detail</string>
+    <string name="custom_pizza">Custom Pizza</string>
     <string name="dismiss">Dismiss</string>
     <string name="network_error">Network Error</string>
     <string name="error">Error</string>
