--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="checkout">Checkout</string>
     <string name="drinks">Drinks</string>
     <string name="custom_pizza_name">Custom %1$s</string>
+    <string name="custom">Custom</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="added_to_cart">Added to cart</string>
     <string name="item_price">(\$%1$.2f)</string>
